--- a/src/moviesearch.css
+++ b/src/moviesearch.css
@@ -1,41 +1,23 @@
-body {
-    background: #f3f3f3;
-    padding-top: 0;
-}
 
 #container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1100px;
     border-left: 2px solid #ccc;
     border-right: 2px solid #ccc;
     border-bottom: 2px solid #ccc;
     padding: 2rem;
     margin: 0 auto;
+    background-color: #4b0985;
 }
-
-main {
-    display: flex;
-    flex-wrap: wrap;
+h1{
+    color: black;
+    text-decoration: none;
 }
-
-main > article {
-    background-color: #f3f3f3;
-}
-
 .frontpage{
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
     position: relative;
-}
-.frontpage a{
-    display: inherit;
-    display: inherit;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
 }
 .frontpage h2{
     width: 100%;
@@ -43,7 +25,8 @@ main > article {
 .moviecard {
     max-width: 300px;
     width: 100%;
-    border: 1px solid #969595;
+    border: 1px solid white;
     padding: 1rem;
     position: relative;
+    background-color: white;
   }
