--- a/src/moviesearch.css
+++ b/src/moviesearch.css
@@ -1,32 +1,119 @@
 
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&display=swap');
+
 #container {
     width: 100%;
-    max-width: 1100px;
-    border-left: 2px solid #ccc;
-    border-right: 2px solid #ccc;
-    border-bottom: 2px solid #ccc;
+    max-width: 1400px;
+    border-left: 5px solid #5e1a15;
+    border-right: 5px solid #5e1a15;
+    border-bottom: 5px solid #5e1a15;
     padding: 2rem;
     margin: 0 auto;
-    background-color: #4b0985;
+    background-color: black;
 }
+header {
+    background-image: url('felix-mooneeram-evlkOfkQ5rE-unsplash.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-align: center;
+    font-size: 4rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    margin-bottom: 1rem;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
 h1{
-    color: black;
+    color: white;
     text-decoration: none;
+    padding-bottom: 10rem;
+    font-family: 'Alkatra';
 }
 .frontpage{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    position: relative;
+  
 }
 .frontpage h2{
     width: 100%;
+    color:white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 35px;
+    text-align: center;
+    
 }
-.moviecard {
-    max-width: 300px;
+
+.searchBTN {
+  height: 35px;
+  margin-bottom: 1rem;
+  max-width: 87px;
+  width: 100%;
+  border: 2px solid #5e1a15;
+  font-family: 'Montserrat', sans-serif;
+}
+.searchInput {
+    height: 35px;
+    max-width: 600px;
     width: 100%;
-    border: 1px solid white;
+    margin-bottom: 1rem;
+    padding: 0.7rem;
+    margin-left: 357px;
+    border: 2px solid #5e1a15;
+    font-family: 'Montserrat', sans-serif;
+}
+.moviePoster {
+    max-height: 400px;
+    max-width: 350px;
+}
+
+.moviecard {
+    max-width: 650px;
+    width: 100%;
     padding: 1rem;
-    position: relative;
     background-color: white;
+    display: flex;
+    margin: auto;
+    margin-bottom: 1rem;
+    border: 5px solid #5e1a15;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    background-color: black;
   }
+
+  .movieInfo {
+   padding: 1rem;
+  }
+  .movieInfo p {
+    color: white;
+    text-align: center;
+    padding: 0.5em 0.7em;
+    font-weight: bold;
+    margin-right: 0.5em;
+    margin-bottom: 0.5em;
+    flex-basis: 10em;
+    border-radius: 10px;
+  }
+  .p1 {
+    background-color: #f56342;
+  }
+
+  .p2 {
+    background-color: #aaad53;
+  }
+  .p3 {
+    background-color: #58ad53;
+  }
+  .p4 {
+    background-color: #a753ad;
+  }
+footer {
+    color: white;
+    text-align: center;
+}
