--- a/src/moviesearch.css
+++ b/src/moviesearch.css
@@ -3,6 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
   @import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&display=swap');
+ 
+  
+  @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+
 
 #container {
     width: 100%;
@@ -25,21 +30,15 @@ header {
     justify-content: center;
     color: white;
     text-align: center;
-    font-size: 4rem;
-    font-weight: bold;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    font-size: 48px;
     margin-bottom: 1rem;
-    font-family: 'Montserrat', sans-serif;
   }
   
 h1{
     color: white;
     text-decoration: none;
     padding-bottom: 10rem;
-    font-family: 'Alkatra';
-}
-.frontpage{
-  
+    font-family: 'Pacifico'
 }
 .frontpage h2{
     width: 100%;
